--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@
 #Ignore all DS_Store files
 /.DS_Store
 /.DS_Store?
+
+#Ignore other unneeded files
+database.yml
+doc/
+*.swp
+.project
+.idea
+.secret
